# ethancarter-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: index.md
src/diffcov/: __init__.py  cli.py  coverage_report.py  diff.py
src/diffcov.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_diffcov.py
