[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffcov"
version = "0.1.0"
description = "Show coverage for your current git diff only."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ProjectCreationAgent" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "coverage[toml]>=7",
    "GitPython>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[project.scripts]
diffcov = "diffcov.cli:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"

[tool.coverage.run]
source = ["diffcov"]

